<resources>
    <string name="app_name">MegaBill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="b_next">Продолжить</string>
    <string name="add_item">add_item</string>
    <string name="item_name">Имя товара</string>
    <string name="item_price">Цена товара</string>
    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="add_name">Введите имя</string>
    <string name="delete">X</string>
    <string name="add_persons_name">Добавьте имена:</string>
    <string name="bill_name">Имя</string>
    <string name="name_item">Продукт</string>
    <string name="price_item">Цена</string>
    <string name="test_name">Mike</string>
    <string name="name_title_total">Имя</string>
    <string name="title_list_total">Список покупок / Итого сумма</string>
    <string name="title_tips_total">Чаевые / итого с чаевыми</string>
    <string name="name_party">Имя мероприятия</string>
    <string name="on_off">Выкл / Вкл</string>
    <string name="need_tips">Нужны ли чаевые?</string>
    <string name="percent_tips">Процент чаевых</string>
    <string name="accept">подтвердить</string>
    <string name="float_button_add">fButtonAdd</string>
    <string name="b_back">Назад</string>
    <string name="b_share">Поделиться</string>
    <string name="logo_splash">logo_splash</string>
    <string name="total_sum">Сумма</string>
    <string name="data">Дата</string>
    <string name="name">Название</string>
    <string name="cloud_help_start">cloud_help_start</string>
    <string name="cloud_person">cloud_person</string>
    <string name="cloud_bill">cloud_bill</string>
</resources>