<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragment.TotalBillFragment">

        <TextView
            android:id="@+id/tvTextTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:gravity="center"
            android:text="@string/need_tips"
            app:layout_constraintEnd_toStartOf="@+id/swTips"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swTips"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/on_off"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvTextTips"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etTipsSize"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/percent_tips"
            android:inputType="numberDecimal"
            android:padding="10dp"
            android:textSize="12sp"
            android:layout_margin="4dp"
            android:visibility="gone"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/relativeTitleTotal"
            app:layout_constraintEnd_toStartOf="@+id/bAcceptTip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTextTips"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/bAcceptTip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_margin="4dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/relativeTitleTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etTipsSize"
            app:layout_constraintTop_toBottomOf="@+id/tvTextTips"
            android:text="@string/accept" />

        <LinearLayout
            android:id="@+id/relativeTitleTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/svTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etTipsSize">

            <TextView
                android:id="@+id/tvTitleName"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/name_title_total" />

            <TextView
                android:id="@+id/tvTitleListAndTotal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/title_list_total" />

            <TextView
                android:id="@+id/tvTitleTipsAndTotal"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/title_tips_total" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/svTotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/bSaveBill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeTitleTotal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/relativeTitleTotal">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTotal"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:padding="8dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:listitem="@layout/total_item">
                </androidx.recyclerview.widget.RecyclerView>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/tvSumBill"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:layout_marginTop="4dp"
            tools:text="Сумма счёта: "
            app:layout_constraintBottom_toTopOf="@+id/etNameOfParty"
            app:layout_constraintEnd_toStartOf="@+id/tvSumBillWithTip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/svTotal" />

        <TextView
            android:id="@+id/tvSumBillWithTip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="С чаевыми: "
            android:padding="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/bSaveBill"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvSumBill"
            app:layout_constraintTop_toBottomOf="@+id/svTotal" />
        <EditText
            android:id="@+id/etNameOfParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/name_party"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bSaveBill"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bSaveBill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etNameOfParty" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>