<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_background"
        tools:context=".presentation.fragment.ListBillFragment">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#0E7512"
            android:backgroundTint="#0E7512"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/bill_name"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/tvItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvItem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#3D9640"
            android:backgroundTint="#3D9640"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/name_item"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toStartOf="@+id/tvPrice"
            app:layout_constraintStart_toEndOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#69BD6D"
            android:backgroundTint="#69BD6D"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/price_item"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvItem"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/svListBill"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constrainedHeight="true"
            app:layout_constraintBottom_toTopOf="@+id/bNextGoTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvItem">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerListBill"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:padding="4dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/bill_item" />
        </ScrollView>

        <ImageView
            android:id="@+id/ivCloudBillHelp"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:visibility="visible"
            android:contentDescription="@string/cloud_bill"
            android:layout_marginEnd="20dp"
            android:background="@drawable/cloud_bill"
            app:layout_constraintBottom_toTopOf="@+id/fbAddItem"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbAddItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/add_item"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_bill_40" />

        <Button
            android:id="@+id/bNextGoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/b_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/fbAddItem"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>